fixed file input layout issues

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1327,6 +1327,10 @@ form input[type="file"] {
   form input[type="file"]:focus {
     box-shadow: 0 0 6px rgba(47, 136, 142, 0.55); }
 
+form input[type="file"] {
+  background-color: #F0FAFA;
+  border: none; }
+
 form button {
   font-family: 'Quicksand', sans-serif;
   text-transform: uppercase;
@@ -1413,6 +1417,9 @@ form button[type="reset"] {
   .single-product .cart .wccpf-fields-group-1 {
     margin-right: 1em;
     flex: 1 0 auto; }
+  @media (max-width: 768px) {
+    .single-product .cart .wccpf-fields-group-1 {
+      flex: 1 0 100%; } }
 
 .single-product .single_add_to_cart_button {
   flex-basis: 100%;
@@ -1501,6 +1508,9 @@ form button[type="reset"] {
     width: 100%; }
   .product-results ul {
     margin: 0 0 1em; }
+  @media (max-width: 768px) {
+    .product-results {
+      flex: 1 0 100%; } }
 
 .product-steps {
   display: none; }
