--- a/static/scss/partials/_form.scss
+++ b/static/scss/partials/_form.scss
@@ -20,6 +20,11 @@ form {
         }
     }
 
+    input[type="file"] {
+        background-color: $faded_blue;
+        border: none;
+    }
+
     button {
         font-family: 'Quicksand', sans-serif;
         text-transform: uppercase;
