--- a/static/scss/partials/_single_product.scss
+++ b/static/scss/partials/_single_product.scss
@@ -13,6 +13,11 @@
             margin-right: 1em;
             flex: 1 0 auto;
         }
+        @media (max-width: 768px) {
+            .wccpf-fields-group-1 {
+                flex: 1 0 100%;
+            }
+        }
         // button[type="submit"] {
         //     margin-top: 1em;
         //     background-color: $faded_teal;
@@ -136,6 +141,9 @@ $bright_green: #6BF060;
     }
     ul {
         margin: 0 0 1em;
+    }
+    @media (max-width: 768px) {
+        flex: 1 0 100%;
     }
 }
 
